Setup CI for TrueNAS/Linux repository
If a previous successful run is
present, then skip re-run for its pull request.

Signed-off-by: Umer Saleem <usaleem@ixsystems.com>

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,6 @@
 *.o
 *.o.*
 *.patch
-*.rmeta
-*.rsi
 *.s
 *.so
 *.so.dbg
@@ -47,7 +45,6 @@
 *.symversions
 *.tab.[ch]
 *.tar
-*.usyms
 *.xz
 *.zst
 Module.symvers
@@ -100,6 +97,7 @@ modules.order
 !.gitignore
 !.mailmap
 !.rustfmt.toml
+!.github
 
 #
 # Generated include files
@@ -165,6 +163,3 @@ x509.genkey
 
 # Documentation toolchain
 sphinx_*/
-
-# Rust analyzer configuration
-/rust-project.json
