--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           concurrent_skipping: 'same_content_newer'
 
-  build_kernel:
+  build_debug_kernel:
 
     needs: pre_build
     if: ${{ needs.pre_build.outputs.should_skip != 'true' }}
@@ -35,17 +35,18 @@ jobs:
           sudo apt update
           sudo apt install -y build-essential gawk flex bison openssl dkms \
           libelf-dev libudev-dev libpci-dev libiberty-dev autoconf dwarves \
-          libncurses-dev libssl-dev
+          libncurses-dev libssl-dev devscripts
 
-      - name: Generate .config 
+      - name: Generate .config
         run: |
           rm -rf .git .gitattributes .gitignore
+          export EXTRAVERSION=-debug
           make defconfig
           make syncconfig
           make archprepare
           ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/debian_amd64.config
           ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/truenas.config
-          ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/debug.config
+          ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/tn-debug.config
           ./scripts/package/mkdebian
           # Workaround to provide additional free space for kernel build
           # https://github.com/actions/virtual-environments/issues/2840
@@ -60,20 +61,82 @@ jobs:
           make distclean
           mv /tmp/.config .config
           make -j$(nproc) bindeb-pkg
-          
+
       - name: Prepare artifacts
         run: |
-          mkdir -p artifacts
-          mv ../*.deb ./artifacts/
-          mv ../*.changes ./artifacts/
-          mv ../*.buildinfo ./artifacts/
-          cp .config ./artifacts/
+          mkdir -p debug-kernel
+          mv ../*.deb ./debug-kernel/
+          mv ../*.changes ./debug-kernel/
+          mv ../*.buildinfo ./debug-kernel/
+          cp .config ./debug-kernel/
 
       - name: Export artifacts
         uses: actions/upload-artifact@v2
         with:
           name: ${{github.sha}}
-          path: ./artifacts
+          path: ./debug-kernel
+
+      - name: Status
+        run: |
+          echo "Status: ${{job.status}}"
+
+  build_production_kernel:
+
+    needs: pre_build
+    if: ${{ needs.pre_build.outputs.should_skip != 'true' }}
+
+    runs-on: ubuntu-20.04
+
+    steps:
+
+      - name: Check out repository code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential gawk flex bison openssl dkms \
+          libelf-dev libudev-dev libpci-dev libiberty-dev autoconf dwarves \
+          libncurses-dev libssl-dev devscripts
+
+      - name: Generate .config
+        run: |
+          rm -rf .git .gitattributes .gitignore
+          export EXTRAVERSION=-production
+          make defconfig
+          make syncconfig
+          make archprepare
+          ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/debian_amd64.config
+          ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/truenas.config
+          ./scripts/kconfig/merge_config.sh .config ./scripts/package/truenas/tn-production.config
+          ./scripts/package/mkdebian
+          # Workaround to provide additional free space for kernel build
+          # https://github.com/actions/virtual-environments/issues/2840
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /opt/ghc
+          sudo rm -rf "/usr/local/share/boost"
+          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+
+      - name: Build Kernel
+        run: |
+          cp .config /tmp/
+          make distclean
+          mv /tmp/.config .config
+          make -j$(nproc) bindeb-pkg
+
+      - name: Prepare artifacts
+        run: |
+          mkdir -p production-kernel
+          mv ../*.deb ./production-kernel/
+          mv ../*.changes ./production-kernel/
+          mv ../*.buildinfo ./production-kernel/
+          cp .config ./production-kernel/
+
+      - name: Export artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{github.sha}}
+          path: ./production-kernel
 
       - name: Status 
         run: |
