--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -1676,7 +1676,7 @@ config X86_PMEM_LEGACY
 
 	  Say Y if unsure.
 
-config FORCE_MAX_ZONEORDER
+config ARCH_FORCE_MAX_ORDER
 	int "Maximum zone order"
 	default "11"
 	help
